디비세팅완료

--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -48,7 +48,7 @@
   <body>
     <div class="container my-5">
       <div class="header mb-5">
-        <h1 class="text-center">게시판 목록</h1>
+        <h1 class="text-center">lovestargram</h1>
       </div>
       <div class="d-flex justify-content-end mb-3">
         <a th:href="@{/boards/create}" class="btn btn-primary">게시판 추가</a>
