--- a/src/main/resources/templates/board/board.html
+++ b/src/main/resources/templates/board/board.html
@@ -23,7 +23,7 @@
         font-family: "Elice DX Neolli", sans-serif;
       }
     </style>
-    <title th:text="${board.name}"></title>
+    <title th:text="${board.board_name}"></title>
   </head>
   <body>
     <div class="container my-5">
@@ -34,7 +34,7 @@
         >&larr; 게시판 목록으로 돌아가기</a
       >
       <div class="header mb-5">
-        <h1 class="text-center" th:text="${board.name}">게시판 제목</h1>
+        <h1 class="text-center" th:text="${board.board_name}">게시판 제목</h1>
         <p
           class="text-center text-secondary"
           th:text="${board.description}"
@@ -55,7 +55,7 @@
           </div>
         </form>
         <a
-          th:href="@{/posts/create(boardId=${board.id})}"
+          th:href="@{/posts/create(boardId=${board.board_id})}"
           class="btn btn-primary"
           >게시글 추가</a
         >
@@ -87,7 +87,7 @@
           >
             <a
               class="page-link"
-              th:href="@{/boards/{boardId}(page=${i}, size=${postPage.size}, boardId=${board.id}, keyword=${keyword})}"
+              th:href="@{/boards/{boardId}(page=${i}, size=${postPage.size}, boardId=${board.board_id}, keyword=${keyword})}"
               th:text="${i + 1}"
               >0</a
             >
