--- a/src/main/resources/templates/board/editBoard.html
+++ b/src/main/resources/templates/board/editBoard.html
@@ -27,7 +27,7 @@
         <h1 class="text-center">게시판 수정</h1>
       </div>
       <form
-        th:action="@{/boards/{boardId}/edit(boardId=${board.id})}"
+        th:action="@{/boards/{boardId}/edit(boardId=${board.board_id})}"
         method="post"
       >
         <div class="mb-3">
@@ -40,7 +40,7 @@
             maxlength="20"
             placeholder="게시판 이름 입력 (최대 20자)"
             required
-            th:value="${board.name}"
+            th:value="${board.board_name}"
           />
         </div>
         <div class="mb-3">
