--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -102,7 +102,7 @@
                   class="btn btn-outline-danger lh-1"
                   data-bs-toggle="modal"
                   data-bs-target="#deleteModal"
-                  th:onclick="handleDeleteButton(event, [[${board.board_id}]]);"
+                  th:onclick="handleDeleteButton(event, ${board.board_id});"
               >
                 <span class="material-symbols-outlined"> delete </span>
               </button>
