--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -40,6 +40,16 @@
       />
     </div>
     <div class="mb-3">
+      <label for="description">게시판 설명</label>
+      <textarea
+          class="form-control"
+          id="description"
+          name="description"
+          maxlength="200"
+          placeholder="게시판 설명 입력 (최대 200자)"
+      ></textarea>
+    </div>
+    <div class="mb-3">
       <label for="userId">작성자</label>
       <select class="form-control" id="userId" name="userId" required>
         <option value="" disabled selected>작성자 선택</option>
