--- a/src/main/resources/templates/board/editBoard.html
+++ b/src/main/resources/templates/board/editBoard.html
@@ -36,7 +36,7 @@
           type="text"
           class="form-control"
           id="name"
-          name="name"
+          name="board_name"
           maxlength="20"
           placeholder="게시판 이름 입력 (최대 20자)"
           required
