refactor: board view 기능구현 완료

--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -98,8 +98,7 @@
               >
                 <span class="material-symbols-outlined"> edit </span>
               </button>
-              <form th:action="@{/boards/{boardId}(boardId=${board.board_id})}" method="post" class="d-inline">
-                <input type="hidden" name="_method" value="delete" />
+              <form th:action="@{/boards/{boardId}(boardId=${board.board_id})}" th:method="delete">
                 <button type="submit" class="btn btn-outline-danger lh-1">
                   <span class="material-symbols-outlined"> delete </span>
                 </button>
