--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -48,6 +48,8 @@
   <div class="container border rounded p-4 position-relative">
     <div class="header mb-3">
       <h2 class="text-start" th:text="${post.title}">게시글 제목</h2>
+      <small class="text-muted" th:text="${#temporals.format(post.created_at, 'yyyy-MM-dd HH:mm')}"></small>
+      <span class="text-muted" th:text="${post.user.username}"></span>
     </div>
     <p class="m-0" th:text="${post.content}">게시글 내용</p>
     <hr class="mt-4" />
@@ -102,7 +104,7 @@
 
     <form
         class="mt-3 row"
-        th:action="@{/comments(postId=${post.post.post.post_id})}"
+        th:action="@{/comments(postId=${post.post.post_id})}"
         method="POST"
     >
       <div class="input-group">
@@ -290,7 +292,21 @@
   let currentBoard;
   let currentComment;
   let elementToDelete;
-
+  function handleDeletePostModalButton() {
+        fetch(`/posts/${currentPost}`, {
+            method: "DELETE",
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            window.location.href = `/boards/${currentBoard}`;
+        })
+        .catch(error => {
+            console.error('There was a problem with the fetch operation:', error);
+            alert('게시글 삭제 중 오류가 발생했습니다.');
+        });
+    }
   function handleDeletePostButton(_, postId, boardId) {
     currentPost = postId;
     currentBoard = boardId;
@@ -308,23 +324,24 @@
   }
 
   function handleDeleteCommentModalButton() {
-    fetch(`/comments/${currentComment}`, {
-      method: "DELETE",
-    }).then(() => elementToDelete.remove());
-
-    const commentsCount = document.getElementById("commentsCount");
-    commentsCount.innerText = parseInt(commentsCount.innerText) - 1;
-
-    const modal = bootstrap.Modal.getInstance("#deleteCommentModal");
-    modal.hide();
-  }
-
-  function handleEditCommentButton(_, commentId, content) {
-    document.getElementById("commentContentTextarea").innerText = content;
-    document
-      .getElementById("commentEditForm")
-      .setAttribute("action", `/comments/${commentId}/edit`);
-  }
+        fetch(`/comments/${currentComment}`, {
+            method: "DELETE",
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            elementToDelete.remove();
+            const commentsCount = document.getElementById("commentsCount");
+            commentsCount.innerText = parseInt(commentsCount.innerText) - 1;
+            const modal = bootstrap.Modal.getInstance("#deleteCommentModal");
+            modal.hide();
+        })
+        .catch(error => {
+            console.error('There was a problem with the fetch operation:', error);
+            alert('댓글 삭제 중 오류가 발생했습니다.');
+        });
+    }
 </script>
 </body>
 </html>
