--- a/src/main/resources/templates/post/createPost.html
+++ b/src/main/resources/templates/post/createPost.html
@@ -26,10 +26,11 @@
   <div class="header mb-5">
     <h1 class="text-center">게시글 추가</h1>
   </div>
-  <form th:action="@{/posts/create(boardId=${boardId})}" method="post">
+  <form th:action="@{/posts/create}" method="post">
+    <input type="hidden" name="boardId" th:value="${boardId}">
     <div class="mb-3">
       <label for="title">게시글 제목</label>
-      <input type="text" class="form-control" id="title" name="user_id" maxlength="30" title="게시글 제목 입력 (최대 30자)" required>
+      <input type="text" class="form-control" id="title" name="title" maxlength="30" title="게시글 제목 입력 (최대 30자)" required>
     </div>
     <div class="mb-3">
       <label for="content">내용</label>
@@ -37,7 +38,9 @@
     </div>
     <div class="mb-3">
       <label for="userId">작성자</label>
-      <input type="text" class="form-control" id="userId" name="userId" required>
+      <select class="form-control" id="userId" name="userId" required>
+        <option th:each="user : ${users}" th:value="${user.user_id}" th:text="${user.username}"></option>
+      </select>
     </div>
     <button type="submit" class="btn btn-primary">업로드</button>
     <button
