--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -108,21 +108,11 @@
     >댓글이 없습니다.</span
     >
 
-    <form
-        class="mt-3 row"
-        th:action="@{/comments(postId=${post.post.post_id})}"
-        method="POST"
-    >
-      <div class="input-group">
-            <textarea
-                class="form-control"
-                name="content"
-                cols="6"
-                placeholder="댓글 작성하기"
-            ></textarea>
-        <button class="btn btn-primary">업로드</button>
-      </div>
-    </form>
+    <div class="mb-3">
+      <label for="content">댓글 내용</label>
+      <textarea class="form-control" id="content" name="content" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">댓글 작성</button>
     //
     <div class="position-absolute top-0 end-0 mt-4 me-4">
       <button
