--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -55,128 +55,78 @@
   </div>
   <div class="container p-0">
     <div class="row row-cols-3 position-relative">
-      <div
-          class="col mb-3"
-          th:unless="${#lists.isEmpty(boards)}"
-          th:each="board : ${boards}"
-      >
-        <div
-            class="card"
-            onmouseover="event.currentTarget.classList.add('shadow')"
-            onmouseleave="event.currentTarget.classList.remove('shadow')"
-        >
-          <a
-              class="board-item pe-auto p-3 link-underline link-underline-opacity-0 d-flex"
-              th:href="@{/boards/{boardId}(boardId=${board.board_id})}"
-          >
-            <img
-                class="img-thumbnail w-50 h-50 me-3"
-                src="hellobit.png"
-                alt="hellobit"
-            />
+      <div class="col mb-3" th:unless="${#lists.isEmpty(boards)}" th:each="board : ${boards}">
+        <div class="card" onmouseover="event.currentTarget.classList.add('shadow')" onmouseleave="event.currentTarget.classList.remove('shadow')">
+          <a class="board-item pe-auto p-3 link-underline link-underline-opacity-0 d-flex" th:href="@{/boards/{boardId}(boardId=${board.board_id})}">
+            <img class="img-thumbnail w-50 h-50 me-3" src="hellobit.png" alt="hellobit" />
             <div>
-              <h4
-                  class="card-title fw-bold text-dark"
-                  th:text="${board.board_name}"
-              >
-                게시판 이름
-              </h4>
-              <span
-                  class="card-text text-secondary text-wrap"
-                  th:text="${board.description}"
-              >게시판 설명</span
-              >
+              <h4 class="card-title fw-bold text-dark" th:text="${board.board_name}">게시판 이름</h4>
+              <span class="card-text text-secondary text-wrap" th:text="${board.description}">게시판 설명</span>
             </div>
-            <div
-                class="position-absolute end-0 bottom-0 mb-3 me-3 btn-group bg-white bg-opacity-75"
-                role="group"
-                aria-label="edit-delete"
-            >
+            <div class="position-absolute end-0 bottom-0 mb-3 me-3 btn-group bg-white bg-opacity-75" role="group" aria-label="edit-delete">
+              <form th:action="@{/boards/{boardId}/edit(boardId=${board.board_id})}" th:method="get">
+                <button type="submit" class="btn btn-outline-primary lh-1">
+                  <span class="material-symbols-outlined">edit</span>
+                </button>
+              </form>
               <button
-                  class="btn btn-outline-primary lh-1"
-                  th:onclick="'event.preventDefault(); location.href=\'/boards/' + ${board.board_id} + '/edit\''"
+                  class="btn btn-outline-danger lh-1"
+                  data-bs-toggle="modal"
+                  data-bs-target="#deleteModal"
+                  th:onclick="handleDeleteButton(event, [[${board.board_id}]]);"
               >
-                <span class="material-symbols-outlined"> edit </span>
-              </button>
-              <button type="button" class="btn btn-outline-danger lh-1" data-bs-toggle="modal" data-bs-target="#deleteModal" th:attr="data-board-id=${board.board_id}">
                 <span class="material-symbols-outlined"> delete </span>
               </button>
+
+
             </div>
           </a>
         </div>
       </div>
     </div>
-    <span
-        th:if="${#lists.isEmpty(boards)}"
-        class="d-block w-100 text-center"
-    >생성된 게시판이 없습니다.</span
-    >
+    <span th:if="${#lists.isEmpty(boards)}" class="d-block w-100 text-center">생성된 게시판이 없습니다.</span>
   </div>
 </div>
 
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="deleteModalLabel">
-          게시판을 삭제하시겠습니까?
-        </h1>
-        <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <p class="fw-light">게시판에 포함된 모든 게시글이 삭제됩니다.</p>
-      </div>
-      <div class="modal-footer">
-        <button
-            type="button"
-            class="btn btn-secondary"
-            data-bs-dismiss="modal"
-        >
-          취소
-        </button>
-        <button
-            type="button"
-            class="btn btn-danger"
-            onclick="handleDeleteModalButton()"
-        >
-          삭제
-        </button>
+<div th:each="board : ${boards}">
+  <div class="modal fade" th:id="'deleteModal-' + ${board.board_id}" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="deleteModalLabel">게시판을 삭제하시겠습니까?</h1>
+        </div>
+        <div class="modal-body">
+          <p class="fw-light" th:text="|'${board.board_name}' 게시판에 포함된 모든 게시글이 삭제됩니다.|"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+          <form th:action="@{/boards/{boardId}(boardId=${board.board_id})}" method="post">
+            <input type="hidden" name="_method" value="delete" />
+            <button type="submit" class="btn btn-danger">삭제</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <script th:inline="javascript">
-  const deleteModal = document.getElementById('deleteModal');
-  let currentBoardId;
+  let currentBoard;
 
-  deleteModal.addEventListener('show.bs.modal', function (event) {
-    const button = event.relatedTarget;
-    currentBoardId = button.getAttribute('data-board-id');
-  });
+  function handleDeleteButton(e, boardId) {
+    e.preventDefault();
+    currentBoard = boardId;
+  }
 
   function handleDeleteModalButton() {
-    fetch(`/boards/${currentBoardId}`, {
+    fetch(`/boards/${currentBoard}/delete`, {
       method: "DELETE",
-    }).then(() => {
-      deleteModal.querySelector('.btn-close').click();
-      location.reload();
-      }).catch((error) => {
-      console.error('Error:', error);
-    });
+    }).then(() => (window.location.href = "/boards"));
   }
 </script>
 
+
 <!-- 부트스트랩 JS 추가 -->
-<script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
