refactor: 게시판 완료 (최종)

--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -78,7 +78,6 @@
                 <span class="material-symbols-outlined"> delete </span>
               </button>
 
-
             </div>
           </a>
         </div>
@@ -88,27 +87,52 @@
   </div>
 </div>
 
-<div th:each="board : ${boards}">
-  <div class="modal fade" th:id="'deleteModal-' + ${board.board_id}" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="deleteModalLabel">게시판을 삭제하시겠습니까?</h1>
-        </div>
-        <div class="modal-body">
-          <p class="fw-light" th:text="|'${board.board_name}' 게시판에 포함된 모든 게시글이 삭제됩니다.|"></p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-          <form th:action="@{/boards/{boardId}(boardId=${board.board_id})}" method="post">
-            <input type="hidden" name="_method" value="delete" />
-            <button type="submit" class="btn btn-danger">삭제</button>
-          </form>
-        </div>
-      </div>
+<div
+    class="modal fade"
+    id="deleteModal"
+    tabindex="-1"
+    aria-labelledby="deleteModalLabel"
+    aria-hidden="true"
+>
+
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h1 class="modal-title fs-5" id="deleteModalLabel">
+        게시판을 삭제하시겠습니까?
+      </h1>
+      <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+      ></button>
+    </div>
+    <div class="modal-body">
+      <p class="fw-light">게시판에 포함된 모든 게시글이 삭제됩니다.</p>
+    </div>
+    <div class="modal-footer">
+      <button
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+      >
+        취소
+      </button>
+      <button
+          type="button"
+          class="btn btn-danger"
+          onclick="handleDeleteModalButton()"
+      >
+        삭제
+      </button>
     </div>
   </div>
 </div>
+</div>
+
+
+
 
 <script th:inline="javascript">
   let currentBoard;
@@ -126,7 +150,14 @@
 </script>
 
 
+
+
+
 <!-- 부트스트랩 JS 추가 -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+></script>
 </body>
 </html>
