refactor: 게시글 목록 완료

--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -39,7 +39,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="post : ${board.posts}">
+    <tr th:each="post : ${post}">
       <td><a th:href="@{/posts/{postId}(postId=${post.post_id})}" th:text="${post.title}"></a></td>
       <td th:text="${post.user.username}"></td>
       <td th:text="${#temporals.format(post.created_at, 'yyyy-MM-dd HH:mm')}"></td>
