feat: board,post,comment,login기능구현 완료 view Clear

--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -33,7 +33,7 @@
   <form th:action="@{/boards/create}" method="post">
     <div class="mb-3">
       <label for="name">게시판 이름</label>
-      <input type="text" class="form-control" id="name" name="board_name" maxlength="20" placeholder="게시판 이름 입력 (최대 20자)" required />
+      <input type="text" class="form-control" id="name" name="boardName" maxlength="20" placeholder="게시판 이름 입력 (최대 20자)" required />
     </div>
     <div class="mb-3">
       <label for="description">게시판 설명</label>
@@ -49,7 +49,7 @@
       <label for="userId">작성자</label>
       <select class="form-control" id="userId" name="userId" required>
         <option value="" disabled selected>작성자 선택</option>
-        <option th:each="user : ${users}" th:value="${user.user_id}" th:text="${user.username}"></option>
+        <option th:each="user : ${users}" th:value="${user.userId}" th:text="${user.username}"></option>
       </select>
     </div>
     <button type="submit" class="btn btn-primary">게시판 추가</button>
