--- a/src/main/resources/templates/post/editPost.html
+++ b/src/main/resources/templates/post/editPost.html
@@ -27,7 +27,7 @@
     <h1 class="text-center">게시글 수정</h1>
   </div>
   <form
-      th:action="@{/posts/{postId}/edit(postId=${post_id})}"
+      th:action="@{/posts/{postId}/edit(postId=${postId})}"
       method="post"
   >
     <div class="mb-3">
