--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -19,16 +19,16 @@
       font-family: "Elice DX Neolli", sans-serif;
     }
   </style>
-  <title th:text="${board.board_name}"></title>
+  <title th:text="${board.boardName}"></title>
 </head>
 <body>
 <div class="container my-5">
   <div class="header mb-5">
-    <h1 class="text-center" th:text="${board.board_name}"></h1>
+    <h1 class="text-center" th:text="${board.boardName}"></h1>
     <p class="text-center" th:text="${board.description}"></p>
   </div>
   <div class="d-flex justify-content-end mb-3">
-    <a th:href="@{/posts/create(boardId=${board.board_id})}" class="btn btn-primary">게시글 추가</a>
+    <a th:href="@{/posts/create(boardId=${board.boardId})}" class="btn btn-primary">게시글 추가</a>
   </div>
   <table class="table">
     <thead>
@@ -39,10 +39,10 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="post : ${post}">
-      <td><a th:href="@{/posts/{postId}(postId=${post.post_id})}" th:text="${post.title}"></a></td>
+    <tr th:each="post : ${posts}">
+      <td><a th:href="@{/posts/{postId}(postId=${post.postId})}" th:text="${post.title}"></a></td>
       <td th:text="${post.user.username}"></td>
-      <td th:text="${#temporals.format(post.created_at, 'yyyy-MM-dd HH:mm')}"></td>
+      <td th:text="${#dates.format(post.created_at, 'yyyy-MM-dd HH:mm')}"></td>
     </tr>
     </tbody>
   </table>
