--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -57,14 +57,14 @@
     <div class="row row-cols-3 position-relative">
       <div class="col mb-3" th:unless="${#lists.isEmpty(boards)}" th:each="board : ${boards}">
         <div class="card" onmouseover="event.currentTarget.classList.add('shadow')" onmouseleave="event.currentTarget.classList.remove('shadow')">
-          <a class="board-item pe-auto p-3 link-underline link-underline-opacity-0 d-flex" th:href="@{/boards/{boardId}(boardId=${board.board_id})}">
+          <a class="board-item pe-auto p-3 link-underline link-underline-opacity-0 d-flex" th:href="@{/boards/{boardId}(boardId=${board.boardId})}">
             <img class="img-thumbnail w-50 h-50 me-3" src="hellobit.png" alt="hellobit" />
             <div>
-              <h4 class="card-title fw-bold text-dark" th:text="${board.board_name}">게시판 이름</h4>
+              <h4 class="card-title fw-bold text-dark" th:text="${board.boardName}">게시판 이름</h4>
               <span class="card-text text-secondary text-wrap" th:text="${board.description}">게시판 설명</span>
             </div>
             <div class="position-absolute end-0 bottom-0 mb-3 me-3 btn-group bg-white bg-opacity-75" role="group" aria-label="edit-delete">
-              <form th:action="@{/boards/{boardId}/edit(boardId=${board.board_id})}" th:method="get">
+              <form th:action="@{/boards/{boardId}/edit(boardId=${board.boardId})}" th:method="get">
                 <button type="submit" class="btn btn-outline-primary lh-1">
                   <span class="material-symbols-outlined">edit</span>
                 </button>
@@ -73,7 +73,7 @@
                   class="btn btn-outline-danger lh-1"
                   data-bs-toggle="modal"
                   data-bs-target="#deleteModal"
-                  th:onclick="handleDeleteButton(event, [[${board.board_id}]]);"
+                  th:onclick="handleDeleteButton(event, [[${board.boardId}]]);"
               >
                 <span class="material-symbols-outlined"> delete </span>
               </button>
