--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
   <meta charset="UTF-8" />
   <link
@@ -23,6 +23,31 @@
 </head>
 </head>
 <body>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" th:href="@{/}">Lovestargram</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/boards}">Boards</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAnonymous()">
+          <a class="nav-link" th:href="@{/register}">Register</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAnonymous()">
+          <a class="nav-link" th:href="@{/login}">Login</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+          <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-link nav-link">Logout</button>
+          </form>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div class="container my-5">
   <div class="header mb-5">
     <h1 class="text-center">게시판 추가</h1>
@@ -30,7 +55,7 @@
   <div th:if="${error}" class="alert alert-danger" role="alert">
     <p th:text="${error}"></p>
   </div>
-  <form th:action="@{/boards/create}" method="post">
+  <form th:action="@{/boards/create}" th:object="${board}" method="post">
     <div class="mb-3">
       <label for="name">게시판 이름</label>
       <input type="text" class="form-control" id="name" name="boardName" maxlength="20" placeholder="게시판 이름 입력 (최대 20자)" required />
