--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,10 @@
+<!-- register.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-  <!-- ... -->
+  <meta charset="UTF-8">
+  <title>Register</title>
+  <!-- Bootstrap CSS 및 기타 CSS 파일 포함 -->
 </head>
 <body>
 <body>
@@ -29,15 +32,20 @@
   </div>
 </nav>
 
-<div class="container my-5">
-  <div class="header mb-5">
-    <h1 class="text-center">사용자 목록</h1>
-  </div>
-  <div class="d-flex justify-content-end mb-3">
-    <a th:href="@{/users/create}" class="btn btn-primary">사용자 추가</a>
-  </div>
-  <!-- ... -->
+<div class="container">
+  <h1>Register</h1>
+  <form th:action="@{/register}" th:object="${user}" method="post">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" id="username" th:field="*{username}" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" th:field="*{password}" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Register</button>
+  </form>
 </div>
-<!-- ... -->
+<!-- Bootstrap JS 및 기타 JS 파일 포함 -->
 </body>
 </html>
